--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,12 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://nehhjsiuhthflfwkfequ.supabase.co"
+      "source": "/api/auth/:path*",
+      "destination": "https://nehhjsiuhthflfwkfequ.supabase.co/auth/v1/:path*"
+    },
+    {
+      "source": "/api/((?!auth).*)",
+      "destination": "https://nehhjsiuhthflfwkfequ.supabase.co/rest/v1/$1"
     },
     {
       "source": "/(.*)",
