--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "diffEditor.experimental.useTrueInlineView": true,
     "files.autoSaveWhenNoErrors": true,
     "files.autoSaveWorkspaceFilesOnly": true,
-    "editor.defaultFormatter": "kilocode.kilo-code",
+    "editor.defaultFormatter": "ms-vscode.cpptools",
     "editor.suggest.showStatusBar": true,
     "workbench.commandPalette.preserveInput": true,
     "workbench.externalBrowser": "chrome",
@@ -143,5 +143,19 @@
         "*test*.py"
     ],
     "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.unittestEnabled": true,
+    "markdown-preview-enhanced.liveUpdate": true,
+    "markdown.extension.preview.autoShowPreviewToSide": true,
+    "markdown-preview-enhanced.useGitHubStylePipedLink": true,
+    "markdown-preview-enhanced.usePandocParser": true,
+    "markdown-preview-enhanced.printBackground": true,
+    "markdown-preview-enhanced.alwaysShowBacklinksInPreview": true,
+    "markdown-preview-enhanced.automaticallyShowPreviewOfMarkdownBeingEdited": true,
+    "markdown-preview-enhanced.enableCriticMarkupSyntax": true,
+    "markdown-preview-enhanced.enableHTML5Embed": true,
+    "markdown-preview-enhanced.enableExtendedTableSyntax": true,
+    "markdown-preview-enhanced.enableScriptExecution": false,
+    "markdown-preview-enhanced.enableTypographer": true,
+    "markdown-preview-enhanced.HTML5EmbedIsAllowedHttp": true,
+    "markdown-preview-enhanced.HTML5EmbedUseLinkSyntax": true
 }
