--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@hookform/resolvers": "^3.10.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.10",
@@ -78,7 +79,6 @@
     "i18next": "^25.2.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
-    "motion": "^12.9.7",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
