--- a/.github/workflows/nodejs-tests.yml
+++ b/.github/workflows/nodejs-tests.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Use Node.js \${{ matrix.node-version }}
+    - name: \\${{ matrix.node-version }} to ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: \${{ matrix.node-version }}
+        node-version: \\${{ matrix.node-version }} to ${{ matrix.node-version }}
 
     - name: Install dependencies
       run: npm install
